Modernize Java: records, instanceof patterns, Collections.of(), and code cleanup
Convert ActionMapKey, FunctionMapKey, TargetQualifierMapKey to Java records;
modernize instanceof with pattern matching across 100+ files; replace
Collections.singletonList/emptyList/unmodifiableList with List.of/Map.of;
simplify SRID equals/hashCode with Objects utility; replace redundant
json.close() with flush() in try-with-resources; convert try/catch/fail
to assertThrows in tests.