@@ -15,6 +15,8 @@
  * KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations
  * under the License.
+ *
+ * Copyright 2026 SiteNetSoft - Modernized Collections usage
  */
 package org.sitenetsoft.olinguito.server.core.uri.queryoption.expression;
 
@@ -122,7 +124,7 @@ public class MethodImpl implements Method {
   @Override
   public List<Expression> getParameters() {
     return parameters == null ?
-        Collections.emptyList() :
+        List.of() :
         Collections.unmodifiableList(parameters);
   }
 
